@@ -1,3 +1,5 @@
+* Add aggregated information on Payment groups
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Allow scheduling payments on their line maturity dates
